# AI_02_03

./: .dockerignore  .gitignore  ARCHITECTURE.md  Create_dummy_users.py  README.md  Sampling_test.py  apicheck.py  build_push.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml  deploy.yml
ai_worker/: Dockerfile  main.py
ai_worker/core/: __init__.py
ai_worker/models/: best_params.json  model_meta.json
ai_worker/schemas/: predict.py
ai_worker/tasks/: predict.py
app/: Dockerfile  main.py
app/ai_worker/: Dockerfile
app/ai_worker/core/: config.py
app/apis/: __init__.py  appointment_router.py
app/apis/v1/: __init__.py  activity_routers.py  appointment_routers.py  auth_routers.py  badge_routers.py  challenge_routers.py  daily_health_log_routers.py  dashboard_routers.py  food_routers.py  goal_routers.py  medication_routers.py  (+5 more)
app/core/: config.py
app/db/: databases.py
app/dependencies/: security.py
app/dtos/: activity.py  appointment_dto.py  auth.py  challenges.py  daily_health_logs.py  dashboard.py  goals.py  health_surveys.py  medications.py  notifications.py  predictions.py  reminders.py  users.py
app/models/: __init__.py  activity_logs.py  appointment.py  badges.py  challenges.py  daily_health_logs.py  food_logs.py  goals.py  health_surveys.py  medications.py  notification_settings.py  predictions.py  reminders.py  users.py
app/repositories/: activity_repository.py  appointment_repository.py  badge_repository.py  challenge_repository.py  daily_health_log_repository.py  goal_repository.py  health_survey_repository.py  medication_repository.py  notification_repository.py  prediction_repository.py  reminder_repository.py  user_repository.py
app/services/: activity.py  appointment_service.py  auth.py  badges.py  challenges.py  daily_health_logs.py  dashboard_service.py  goals.py  health_surveys.py  jwt.py  medications.py  notifications.py  oauth.py  predictions.py  reminders.py  users.py
app/tests/: conftest.py  test_all.py
app/utils/: email.py  redis.py  score.py
app/validators/: user_validators.py
envs/: example.local.env
frontend/: .env.development  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: vite-env.d.ts
nginx/: default.conf  prod_http.conf  prod_https.conf
notebooks/: knhanes_preprocess.ipynb  preprocess.ipynb  train.ipynb  train.py
notebooks/.ipynb_checkpoints/: knhanes_preprocess-checkpoint.ipynb  preprocess-checkpoint.ipynb
(+99 files in other folders)
