[project]
name = "ai-health-example"
version = "0.1.0"
description = "AI 헬스케어 파이널 프로젝트 예시용"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.3",
    "fastapi>=0.128.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dateutil>=2.9.0.post0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.48",
    "tomlkit>=0.14.0",
    "tzdata>=2025.3",
    "uvicorn>=0.40.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.22",
    "passlib>=1.7.4",
    "bcrypt>=4.0.1",
    "orjson>=3.11.5",
    "fpdf2>=2.8.7",
    "openai>=2.32.0",
    "boto3>=1.35.0",
    "aiosmtplib>=5.1.0",
]

[dependency-groups]
ai-worker = [
    "celery>=5.5.0",
    "joblib>=1.5.0",
    "lightgbm>=4.6.0",
    "numpy>=2.2.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.0.0",
]
ai-train = [
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.10.0",
    "optuna>=4.3.0",
    "seaborn>=0.13.0",
    "sentence-transformers>=5.2.0",
    "torch",
    "torchvision",
    "torchaudio",
]
app = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "bcrypt<=4.0.1",
    "celery>=5.5.0",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "orjson>=3.11.5",
    "passlib[bcrypt]>=1.7.4",
    "python-dateutil>=2.9.0",
    "pyjwt>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "tzdata>=2025.3",
    "uvicorn>=0.40.0",
    "fpdf2>=2.8.7",
]
dev = [
    "coverage>=7.13.2",
    "jupyterlab>=4.5.6",
    "mypy>=1.19.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
    "types-passlib>=1.7.7.20250602",
    "types-python-dateutil>=2.9.0.20260124",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
# 기본 라인 길이 설정
line-length = 120
target-version = "py312"
exclude = ["notebooks", ".venv"]

[tool.ruff.lint]
# 사용할 린트 규칙들 선택
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = ["UP046", "E501"]

# 특정 파일에서 무시할 규칙들
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"app/db/migrations/*" = ["ALL"]

[tool.ruff.format]
# 포매터 설정
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
